# ChangeLog for dev-lang/python
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.291 2007/11/18 22:43:32 hawking Exp $

*python-2.5.1-r4 (18 Nov 2007)
*python-2.4.4-r7 (18 Nov 2007)

  18 Nov 2007; Ali Polatel <hawking@gentoo.org> +python-2.4.4-r7.ebuild,
  +python-2.5.1-r4.ebuild:
  revbump(s). don't install windows executables, bug 198021. updated patchset
  to fix implicit dependency on openssl, bug 198398. fix quoting.

  27 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  python-2.3.6-r3.ebuild, python-2.4.4-r6.ebuild:
  ppc stable, bug #192876

  26 Oct 2007; Ali Polatel <hawking@gentoo.org> python-2.4.4-r4.ebuild,
  python-2.4.4-r5.ebuild, python-2.4.4-r6.ebuild:
  Changed SRC_URI of python-gentoo-patches-2.4* to mirror://gentoo

  25 Oct 2007; Jeroen Roovers <jer@gentoo.org> python-2.4.4-r6.ebuild:
  Stable for HPPA (bug #192876). Fixed quoting issues.

  25 Oct 2007; Jeroen Roovers <jer@gentoo.org> python-2.3.6-r3.ebuild:
  Stable for HPPA (bug #192876).

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org> python-2.3.6-r3.ebuild,
  python-2.4.4-r6.ebuild:
  alpha/ia64/sparc stable wrt security #192876

  25 Oct 2007; Daniel Gryniewicz <dang@gentoo.org> python-2.3.6-r3.ebuild,
  python-2.4.4-r6.ebuild:
  Marked stable on amd64 for bug #192876

  25 Oct 2007; Markus Rothe <corsair@gentoo.org> python-2.3.6-r3.ebuild,
  python-2.4.4-r6.ebuild:
  Stable on ppc64; bug #192876

  25 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  python-2.3.6-r3.ebuild:
  stable x86, security bug 192876

  25 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  python-2.4.4-r6.ebuild:
  stable x86, security bug 192876

*python-2.5.1-r3 (24 Oct 2007)
*python-2.4.4-r6 (24 Oct 2007)
*python-2.3.6-r3 (24 Oct 2007)

  24 Oct 2007; Ali Polatel <hawking@gentoo.org> +python-2.3.6-r3.ebuild,
  +python-2.4.4-r6.ebuild, +python-2.5.1-r3.ebuild: