@@ -15,9 +15,11 @@ AUX python-updater-r1-prefix.patch 2488 RMD160 b4008d3004b64de6245fa9a0fb52ebf75
 DIST Python-2.5.1.tar.bz2 9383651 RMD160 af0e8ed93bbc07015c338ae19bbee8811da21c1c SHA1 993a66bd2dabb0c4f33ca98372576315ef113df6 SHA256 d0b5d4dce02c56d2eb0728db3ebd63afc3dae906d158be6532ae4480d311e167
 DIST python-gentoo-patches-2.5.1-r1.tar.bz2 6701 RMD160 7c2ad1de35a1ff73b703ef8ffe4d42b4151082ab SHA1 444b5580ad334a507603363ecac2f8a61b9b48e8 SHA256 e721bdb30cee9cd0bebfab604821d94111dc6a00276b486b39016aa8984c7c78
 DIST python-gentoo-patches-2.5.1-r2.tar.bz2 7277 RMD160 c919653b71c3a46d4d41b02afe6c2caa634c975d SHA1 f430f021f5cf9ba81e3f22d4e9344f2d757fb6b8 SHA256 3946c52dae8321ac06d12b7da26b4d5cf34e972b00c28289ead51fc8af8313d1
+DIST python-gentoo-patches-2.5.1-r3.tar.bz2 9597 RMD160 02f26d19e6bab99c41ef2a293f081e90bb653e5a SHA1 8d1a6fe57d61f96c9ae737ab61bb2cc23e330431 SHA256 ce3d085f3948169b28b00b9a5dfa7719bcac9cc2974a50110db9843ce1cbd360
 DIST python-gentoo-patches-2.5.1.tar.bz2 5430 RMD160 7cdfb51c00a49ebb9027228691e10b8c4c3f574f SHA1 435bb50e342555fc6fac79d72a22a88b592a3627 SHA256 065f31d46c3b57d99b1c3236bbaf445ca142fda33c9ef13e7e2e39be3d027499
-EBUILD python-2.5.1-r02.2.ebuild 11313 RMD160 d406ff49c58a1ed249528520dac8736fbc4123fc SHA1 b55fdebd6f78ebdabf0657e0c52d9d9df0531f05 SHA256 2be7c3d33f02df084802299160ed8b5399ef3e9906b8073cc35421d7be02c1d9
-EBUILD python-2.5.1-r3.ebuild 11756 RMD160 8813fc7b236eb82574c2dd184277813203549ca3 SHA1 0b1474728d62d6d4f9be86a86dbf2029f12fbec2 SHA256 8d01e3aafa8249fe1d63a90df9d55668c1cac6ab748538f38fe70cfbb62b5164
-EBUILD python-2.5.1-r4.ebuild 11914 RMD160 6111b95b4a5c11e9142f3a443413ed32cc9664a4 SHA1 5bbb2e9f207999d1b3b71ddb24b7f1f34879d9de SHA256 8d7898de8661751ea7b7bfce16322d390a0325be47691c499e42cc7a4dc49148
-MISC ChangeLog 50157 RMD160 3b3c5d3ec18d68487d3aadc7a3d5b9b60b91b390 SHA1 218ce31d4e76795de3244f91d274d6876d574694 SHA256 f87f2c01db435af478ca62f7abeb0f4142cd957e1c578845551a5c9251390035
+EBUILD python-2.5.1-r02.2.ebuild 11331 RMD160 c02861c9c36c5ba9d3a6cc02c7b05d8bd70d199b SHA1 50b77e6ca27430315b3f611a9c5c221326ca8436 SHA256 40eaee2c03e35158c0d3ea09aa52de0a07d860f789d3ca439d1c589d8cedb204
+EBUILD python-2.5.1-r3.ebuild 11774 RMD160 e0a0f01c54de87d926f1b6f029a03c5243c29bf9 SHA1 34d91dc89613058c59880c2d3ee49273c1795e5d SHA256 22636877731eabb6ed68a764753febb993c330eb789d43050021b987b0e9d3ef
+EBUILD python-2.5.1-r4.ebuild 11932 RMD160 eabed07b16b55821c01fbfe8eb8e8fbfa61abc1c SHA1 2980d069ca97533d3a48b03513a12e2241cb0410 SHA256 d56dc799770cae135a632abc36844f3d8e733d17831e8978e53e69090fd62bf3
+EBUILD python-2.5.1-r5.ebuild 12117 RMD160 6b916f9a133c6f57459daee0bb03ab346a06e89a SHA1 eb33e4c40e54093c889d2920712c0f85322037a9 SHA256 fe1d77a618d013122700d435cca27371a52835e65f195d16755aab55c079f384
+MISC ChangeLog 50399 RMD160 60bbc1e24b9c28c9a581e58b991a3deed4623170 SHA1 0f100e3acc0ab8ea727b02cca1138b4de93ba1a9 SHA256 3161fc926073eeaaad223dddcd309a5ff17c321db935c028805ea1ede5b3fc2b
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
