@@ -1,6 +1,13 @@
 # ChangeLog for dev-lang/python
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.291 2007/11/18 22:43:32 hawking Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.292 2008/01/07 17:40:51 hawking Exp $
+
+*python-2.5.1-r5 (07 Jan 2008)
+*python-2.4.4-r8 (07 Jan 2008)
+
+  07 Jan 2008; Ali Polatel <hawking@gentoo.org> +python-2.4.4-r8.ebuild,
+  +python-2.5.1-r5.ebuild:
+  Revision bump(s). New patchsets for 2.4.4 and 2.5.1 wrt #204700 and #204343
 
 *python-2.5.1-r4 (18 Nov 2007)
 *python-2.4.4-r7 (18 Nov 2007)
